# bevy_quadruped_neural_control

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yaml
assets/: g1-control-direction+orientation.onnx  g1-control-direction.onnx  g1-forward.onnx
assets/unitree_a1/: LICENSE  README.md  a1.xml  scene.xml
examples/: a1_walk.rs  a1_walk_follow.rs  bevy_rl_rest.rs  tract.rs
python/: compare_onnx_pytorch.ipynb  policy.py
src/: main.rs
