[package]
name = "bevy_quadruped_neural_control"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stillonearth/bevy_quadruped_neural_control"

[dependencies]
bevy = "0.9.1"
bevy_rl = { version = "0.9.8-beta" }                                                                          # { version = "0.9.6" }
bevy_mujoco = { git = "https://github.com/stillonearth/bevy_mujoco.git", rev = "91e6b7d" }
bevy-inspector-egui = { version = "0.15.0" }
bevy_flycam = { version = "0.9.0" }
rand = "0.8.5"
serde = "1.0.89"
serde_derive = "1.0.143"
serde_json = "1.0.83"
tract-onnx = { git = "https://github.com/sonos/tract.git", rev = "b54a0a613a8cd3fae9e8fe0fd13228b5e61ebe64" }
lazy_static = "1.4.0"

[profile.dev]
opt-level = 3

[[example]]
name = "a1_walk"

[[example]]
name = "bevy_rl_rest"
