[package]
name = "bevy_quadruped_neural_control"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stillonearth/bevy_quadruped_neural_control"

[dependencies]
bevy = "0.12"
bevy_rl = { version = "0.12" }                                                      # { version = "0.9.6" }
bevy_mujoco = { version = "0.12" }
# bevy-inspector-egui = { version = "0.18.1" }
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
rand = "0.8.5"
serde = "1.0.158"
serde_derive = "1.0.158"
serde_json = "1.0.94"
tract-onnx = { version = "0.19.7" }
lazy_static = "1.4.0"

[profile.dev]
opt-level = 3

[[example]]
name = "a1_walk"

[[example]]
name = "bevy_rl_rest"
